remove EOF from command line, introduce EvmSpecVersion enum.
Signed-off-by: Danno Ferrin <danno.ferrin@swirldslabs.com>